# HoMM3

./: README.md  pyproject.toml
data/: homm3.db  todo_list.txt
homm3/: arguments.py  contexts.py  db.py  enums.py  filters.py  matches.py  params.py  properties.py  registry.py  resources.py  units.py  values.py  visual.py
homm3/abilities/: __init__.py  alternatives_actions.py  applying_effects.py  attack_rules.py  damage_modifiers.py  default_actions.py  gaining_resources.py  global_map.py  health_processing.py  immunity_resistance.py  luck_modifiers.py  mana_processing.py  morale_modifiers.py  speed_modifiers.py  states_processing.py  turn_control.py  units_special.py
homm3/battles/: __init__.py  controller.py  line.py  queue.py
homm3/effects/: __init__.py  alternatives_actions.py  cast_spells.py  damage_processing.py  damage_spells.py  default_actions.py  defense_spells.py  health_processing.py  instant_kill.py  morale_processing.py  states_processing.py  stats_modifiers.py  turn_control.py
homm3/events/: __init__.py  battle_steps.py  cast_spells.py  damage_outcomes.py  default_actions.py  effects_processing.py  health_processing.py  luck_morale.py  special_events.py  states_processing.py
homm3/states/: __init__.py  damage_modifiers.py  default_actions.py  defense_spells.py  health_processing.py  stats_modifiers.py  turn_control.py
homm3/strategies/: __init__.py  alternative_actions.py  cast_spells.py  damage_maximization.py  rune_based.py
notebooks/: run_match.ipynb
scripts/: run_battle.py
tests/: test_line_battle_unit_pairs.py
